Impressum hinzugefügt, Links korrigiert, Busverkehr hinzugefügt, Partner auf der Homeseite hinzugefügt

--- a/sites/location.html
+++ b/sites/location.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="divAll-Wrapper">
 		<div id="divTop-wrapper"> 
-            <a href="index.php">
+            <a href="../../../index.php">
                 <div id="divLogo">
                     <img id="logo"  src="../images/logo.png" alt="logo"> 
                 </div>
@@ -63,6 +63,9 @@
                     <span>12109 Berlin</span><br>   
                     <span>Deutschland</span><br><br><br>
                     <p id="contactUs">Öffentlicher Nahverkehr:</p>
+                    <span>Friedhof Mariendorf &nbsp; ► &nbsp; &nbsp; &nbsp;</span><span class="txtBus">&nbsp;277&nbsp;</span>&nbsp;<span class="txtBus">&nbsp;N79&nbsp;</span><br><br>
+                    <span>Skutaristr. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ►  &nbsp; &nbsp; &nbsp; <span class="txtBus">&nbsp;282&nbsp;</span>&nbsp; <span class="txtBus">&nbsp;277&nbsp;</span>&nbsp; <span class="txtBus">&nbsp;N79&nbsp;</span>&nbsp;</span><br><br>
+                    <span>Didostr. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ►  &nbsp; &nbsp; &nbsp; <span class="txtBus">   &nbsp;282&nbsp;</span>&nbsp;</span>
                 </div>                
             </div>			
 			<div id="divContentRight-Wrapper">
@@ -125,27 +128,27 @@
                     <p id="contactUs">ÖFFNUNGSZEITEN</p>                    
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Mo: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Mo: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Di: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Di: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Mi: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Mi: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Fr: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Fr: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Sa: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Sa: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                 </div>
                 <div id="divFootColumn3" class="footerColumn">
@@ -191,7 +194,9 @@
                     </a>
                 </div>
                 <div id="divLinks">
-                    <span>Impressum</span>
+                    <a class="normalLink" href="impressum.html">
+                        <span>Impressum</span>
+                    </a>
                 </div>
             </div>
            
