--- a/sites/carrer.html
+++ b/sites/carrer.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="divAll-Wrapper">
 		<div id="divTop-wrapper"> 
-            <a href="index.php">
+            <a href="../../../index.php">
                 <div id="divLogo">
                     <img id="logo" src="../images/logo.png" alt="logo"> 
                 </div>
@@ -125,27 +125,27 @@
                     <p id="contactUs">ÖFFNUNGSZEITEN</p>                    
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Mo: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Mo: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Di: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Di: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Mi: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Mi: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Fr: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Fr: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                     <div class="divHome">
                         <i>►</i>
-                        <i class="footerColumnText">Sa: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;09:30 - 20:00 Uhr</i>
+                        <i class="footerColumnText">Sa: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;08:00 - 22:00 Uhr</i>
                     </div>
                 </div>
                 <div id="divFootColumn3" class="footerColumn">
@@ -191,7 +191,9 @@
                     </a>
                 </div>
                 <div id="divLinks">
-                    <span>Impressum</span>
+                    <a class="normalLink" href="impressum.html">
+                        <span>Impressum</span>
+                    </a>
                 </div>
             </div>
            
