--- a/sites/carrer.html
+++ b/sites/carrer.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">   
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans+Condensed:300" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/slider.css">
+    <link rel="stylesheet" type="text/css" href="../css/slider.css">    
+    <script src="../js/carrer.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="utf-8"/>
 </head>
@@ -62,10 +63,10 @@
                         </div>  
                     <div id="divCarrerOpenPositionsContent">
                         <ul id="openPositionList">
-                            <li>Ausbildung als Bäckereifachverkäufer/in</li>
-                            <li>Verkäufer Vollzeit</li>
-                            <li>Verkäufer Teilzeit</li>
-                            <li><a href="#" id=ball>Dualer Student Wirtschaftsinformatik</a></li>
+                            <li id="listItem1" class="fade-in one">Ausbildung als Bäckereifachverkäufer/in</li>
+                            <li id="listItem2" class="fade-in two">Verkäufer Vollzeit</li>
+                            <li id="listItem3" class="fade-in three">Verkäufer Teilzeit</li>
+                            <li id="listItem4" class="fade-in four">Dualer Student Wirtschaftsinformatik</li>
                           </ul>
                     </div>
                    
