--- a/sites/impressum.html
+++ b/sites/impressum.html
@@ -165,13 +165,12 @@
                      </div>
                 </div>
                 <div id="divFootColumn4" class="footerColumn">
-                    <p id="contactUs">NEWSLETTER</p>
-                    <form>
-                        <input class="txtNewsletter" type="text" placeholder="Name">
-                        <input class="txtNewsletter" type="text" placeholder="E-Mail">
-                        <a href="" class="btnSend mail">&nbsp;&nbsp;&nbsp;Anfordern</a> 
-                    </form>
-                </div>                
+                    <p id="contactUs">KOOPERATIONSPARTNER</p>
+                    <div class="divHome">
+                        <i>►</i>
+                        <i class="footerColumnText"><a class="normalLink" href="http://www.tsvtm.de/" target="_blank">TSV Tempelhof-Mariendorf e.V.</a></i>
+                     </div>                    
+                </div>                      
 		    </div>
             <div id="divFooterRow">
                 <div id="divSocialMedia">
