Anpassung für FTP

--- a/sites/carrerJob01.html
+++ b/sites/carrerJob01.html
@@ -1,3 +1,8 @@
-
-    <span>Ich bin Job 01</span>
+<html>
+<head>
+</head>
+    <body>
+        <span>Ich bin Job 01</span>
     
+    </body>
+</html>
