--- a/sites/carrer.html
+++ b/sites/carrer.html
@@ -87,7 +87,7 @@
                         </div>
                         <div id="divCarrerContactPersonContext">
                             <span>Name: Sascha Retzdorf</span>
-                            <span>Mail: max.mustermann@edeka.de</span>
+                            <span>max.mustermann@edeka.de</span>
                             <span>Tele: 030 123-4564</span>
                             <span>Fax: 030 123-4565</span>
                         </div>
