--- a/sites/events.html
+++ b/sites/events.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lenkheit</title>
+	<title>Edeka Lenkheit - Events</title>
     <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">      
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans+Condensed:300" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
 	<div id="divAll-Wrapper">
 		<div id="divTop-wrapper"> 
-            <a href="../../../index.php">
+            <a href="../../../">
                 <div id="divLogo">
                     <img id="logo" src="../images/logo.png" alt="logo"> 
                 </div>
@@ -22,31 +22,31 @@
                 <nav>
                     <ul>
                         <li>
-                            <a id="navAboutus" href="..\sites\aboutus.html">            
+                            <a id="navAboutus" href="..\sites\aboutus">            
                                 <i class="fa fa-building fa-2x" aria-hidden="true"></i>
                                 <span>ÜBER UNS</span>
                             </a>
                         </li>
                         <li>
-                            <a id="navEvents" href="..\sites\events.html" class="selectedEvents">
+                            <a id="navEvents" href="..\sites\events" class="selectedEvents">
                                 <i class="fa fa-calendar-check-o fa-2x" aria-hidden="true"></i>
                                 <span>EVENTS</span>
                             </a>
                         </li>
                         <li>
-                            <a id="navCarrer" href="..\sites\carrer.html">
+                            <a id="navCarrer" href="..\sites\carrer">
                                 <i class="fa fa-users fa-2x" aria-hidden="true"></i>
                                 <span>KARRIERE</span>
                             </a>
                         </li>
                         <li>
-                            <a id="navLocation" href="..\sites\location.html"> 
+                            <a id="navLocation" href="..\sites\location"> 
                                 <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
                                 <span>STANDORT</span>
                             </a>
                         </li>
                         <li>
-                            <a href="../../../index.php" id="navHome">
+                            <a href="../../../" id="navHome">
                                 <i class="fa fa-home fa-2x" aria-hidden="true"></i>
                                 <span>HOME</span>                   
                             </a>
@@ -189,7 +189,7 @@
                     </a>
                 </div>
                 <div id="divLinks">
-                    <a class="normalLink" href="impressum.html">
+                    <a class="normalLink" href="impressum">
                         <span>Impressum</span>
                     </a>
                 </div>
